Fix layout shift in radio options

--- a/styles/fields/radio.css
+++ b/styles/fields/radio.css
@@ -9,7 +9,8 @@ label + .radio-wrapper{
 }
 
 .radio-inner{
-  border: 1px solid var(--stroke-default);
+  border: 2px solid transparent;
+  outline: 1px solid var(--stroke-default);
   border-radius: .5rem;
 
   display: grid;
@@ -38,7 +39,7 @@ label + .radio-wrapper{
   }
   
   &:hover, &:focus-within{
-    border: 1px solid var(--stroke-highlight);
+    outline: 1px solid var(--stroke-highlight);
 
     & .radio-image{
       background-image: url(../../assets/icons/circle-01-hover.svg);
@@ -46,7 +47,7 @@ label + .radio-wrapper{
   }
   
   &:has(:checked){
-    border: 2px solid var(--stroke-highlight);
+    outline: 2px solid var(--stroke-highlight);
     
     & .radio-image{
       background-image: url(../../assets/icons/circle-01-checked.svg);
